--- a/scripts/OD calculation.Rmd
+++ b/scripts/OD calculation.Rmd
@@ -61,13 +61,13 @@ library(readxl)
 ## Set directory
 
 ```{r directory}
-setwd("C:/Users/iande/Downloads/seminario R/")
+setwd("C:/Users/iande/Documentos/git/Seminario-R/")
 ```
 
 ## Load files
 
 ```{r}
-De.data <- read.csv("Dating_L1415_R2_1.csv", sep = ',')
+De.data <- read.csv("C:/Users/iande/Documentos/git/Seminario-R/Dating_L1415_R2_1.csv", sep = ',')
 ```
 
 # Initialize variables to reproduce the Central Age Model estimation
